ci: Add Chinese README workflow and enhance documentation
- Add new `update-readme-cn.yml` workflow to automatically update Chinese README with latest blog posts from RSS feed
- Update `update-readme.yml` workflow with explicit readme_path and disable_sort parameters
- Enhance `.github/workflows/README.md` documentation with detailed workflow descriptions and troubleshooting guides
- Reorganize workflow documentation to separate English and Chinese README update workflows
- Add blog post format configuration section with template examples
- Improve troubleshooting section with specific solutions for common issues
- Update customization guide with template modification examples
- Clean up README.md and README_CN.md to use proper comment markers for automated blog post updates
- Remove manual blog post lists to allow workflow automation to manage content

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -49,3 +49,5 @@ jobs:
           commit_message: "Updated with latest blog posts"
           committer_username: "github-actions[bot]"
           committer_email: "github-actions[bot]@users.noreply.github.com"
+          readme_path: "./README.md"
+          disable_sort: false
