docs: Format blog post lists for improved readability
- Format blog post entries in README.md with line breaks for better readability
- Format blog post entries in README_CN.md with line breaks for better readability
- Improve visual hierarchy of latest blog posts section in both English and Chinese versions
- Maintain all existing blog post links and content while enhancing formatting

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -45,7 +45,8 @@ jobs:
         with:
           feed_list: "https://naodeng.com.cn/index.xml"
           max_post_count: 6
-          template: "- [$title]($url)"
+          template: "- [$title]($url)
+"
           commit_message: "Updated with latest blog posts"
           committer_username: "github-actions[bot]"
           committer_email: "github-actions[bot]@users.noreply.github.com"
