--- a/.github/workflows/update-readme-cn.yml
+++ b/.github/workflows/update-readme-cn.yml
@@ -28,7 +28,8 @@ jobs:
         with:
           feed_list: "https://naodeng.com.cn/zh/index.xml"
           max_post_count: 6
-          template: "- [$title]($url)"
+          template: "- [$title]($url)
+"
           commit_message: "Updated Chinese README with latest blog posts"
           committer_username: "github-actions[bot]"
           committer_email: "github-actions[bot]@users.noreply.github.com"
