--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -20,35 +20,43 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Generate Snake Animation
-        uses: Platane/snk@v3
-        with:
-          github_user_name: naodeng
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
-      - name: Push Snake Animation
-        uses: crazy-max/ghaction-github-pages@v4
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Update Blog Posts
+      - name: Update English Blog Posts
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
           feed_list: "https://naodeng.com.cn/index.xml"
           max_post_count: 6
-          template: "- [$title]($url)
-"
           commit_message: "Updated with latest blog posts"
           committer_username: "github-actions[bot]"
           committer_email: "github-actions[bot]@users.noreply.github.com"
-          readme_path: "./README.md"
-          disable_sort: false
+
+      - name: Update Chinese Blog Posts
+        uses: gautamkrishnar/blog-post-workflow@v1
+        with:
+          feed_list: "https://naodeng.com.cn/zh/index.xml"
+          max_post_count: 6
+          commit_message: "Updated Chinese README with latest blog posts"
+          committer_username: "github-actions[bot]"
+          committer_email: "github-actions[bot]@users.noreply.github.com"
+          readme_path: "./README_CN.md"
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Fix Blog Post Formatting
+        run: |
+          python .github/scripts/fix_blog_format.py
+
+      - name: Commit formatting fixes
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add README.md README_CN.md
+          if ! git diff --quiet --staged; then
+            git commit -m "Fix blog post formatting"
+            git push
+          else
+            echo "No formatting changes to commit"
+          fi
